# fast-chat-api

./: .dockerignore  .env  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt
alembic/: env.py
alembic/versions/: 40f9b42cdb82_initial_migration.py
app/: main.py
app/api/v1/: api.py
app/api/v1/endpoints/: chats.py
app/core/: config.py  db.py
app/crud/: __init__.py  base.py  crud_chat.py
app/models/: __init__.py  base.py  chat.py  message.py
app/schemas/: __init__.py  chat.py  message.py
migrations/: env.py
migrations/versions/: 9000a4a0f852_initial_structure.py  95d2b66ef5b1_create_chats_and_messages_tables.py
tests/: conftest.py
tests/api/v1/: test_chats.py
